--- a/Seed/imgui.ini
+++ b/Seed/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=-2,6
+Pos=5,197
 Size=403,290
 Collapsed=0
 
@@ -7,4 +7,19 @@ Collapsed=0
 Pos=1044,0
 Size=550,680
 Collapsed=1
+
+[Window][Scene Graph]
+Pos=999,1
+Size=361,197
+Collapsed=0
+
+[Window][Switch skybox]
+Pos=1462,207
+Size=136,169
+Collapsed=0
+
+[Window][Culled lights]
+Pos=1360,1
+Size=240,204
+Collapsed=0
 
