--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -259,9 +259,6 @@
     <ClInclude Include="FileSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GameScript.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="RotateWorldScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
@@ -387,6 +384,9 @@
     </ClInclude>
     <ClInclude Include="PhysicsObject.h">
       <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="LightScript.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
