fix opengl error and other various fixes

--- a/Seed/imgui.ini
+++ b/Seed/imgui.ini
@@ -14,17 +14,22 @@ Size=361,197
 Collapsed=0
 
 [Window][Switch skybox]
-Pos=1351,207
+Pos=1464,209
 Size=136,169
 Collapsed=0
 
 [Window][Culled lights]
-Pos=1351,1
+Pos=1361,0
 Size=240,204
 Collapsed=1
 
 [Window][Scene graph]
-Pos=1006,4
+Pos=1002,0
 Size=360,204
-Collapsed=0
+Collapsed=1
+
+[Window][Bullet attributes]
+Pos=4,114
+Size=275,151
+Collapsed=1
 
