--- a/Seed/imgui.ini
+++ b/Seed/imgui.ini
@@ -33,3 +33,18 @@ Pos=1644,0
 Size=275,151
 Collapsed=1
 
+[Window][HeightMap settings]
+Pos=60,60
+Size=369,78
+Collapsed=0
+
+[Window][heightMapTes settings]
+Pos=60,60
+Size=236,62
+Collapsed=0
+
+[Window][heightMap settings]
+Pos=56,122
+Size=231,70
+Collapsed=0
+
