--- a/Seed/Seed.vcxproj.filters
+++ b/Seed/Seed.vcxproj.filters
@@ -200,6 +200,9 @@
     <ClCompile Include="DynamicCharacterController.cpp">
       <Filter>Source Files\Physics</Filter>
     </ClCompile>
+    <ClCompile Include="TessellationShader.cpp">
+      <Filter>Source Files\Rendering</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
@@ -397,6 +400,12 @@
     <ClInclude Include="CameraAroundObjectScript.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="TessellationShader.h">
+      <Filter>Header Files\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="HeightMapSettingsScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\Skybox.frag">
@@ -466,6 +475,18 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="shaders\PointLightShadow.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\HeightMap.tcs">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\HeightMap.tes">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="HeightMapGBuffer.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="shaders\HeightMapGBuffer.frag">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
